# alembic_fastapi_backend_template

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
api/: utils.py
api/api_v1/: api.py
api/api_v1/endpoints/: api_auth.py  api_blog.py  api_read_blog.py  api_reader.py
api/api_v1/services/: user_services.py
core/: config.py  security.py
db/: db.py
midgration/: env.py
midgration/versions/: 0b5801f765c0_init_1.py  15826a471bda_update_time.py  30fb7beb83d9_update_password.py
models/: model_base.py  model_blog.py  model_reader.py  model_reader_blog.py
